[tool.poetry]
name = "logevents"
version = "0.1.0"
description = ""
authors = ["Marra <marrabarbosa9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
bcrypt = "^4.2.0"
pony = "^0.7.19"
pydantic = "^2.9.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
